--- a/config/gtk-4.0/gtk.css
+++ b/config/gtk-4.0/gtk.css
@@ -4,20 +4,20 @@
 */
 
 @media (prefers-color-scheme: light) {
-    @define-color accent_color #006b54;
+    @define-color accent_color #0062a1;
     @define-color accent_fg_color #ffffff;
-    @define-color accent_bg_color #006b54;
-    @define-color window_bg_color #effdf5;
-    @define-color window_fg_color #121e1a;
+    @define-color accent_bg_color #0062a1;
+    @define-color window_bg_color #f8f9ff;
+    @define-color window_fg_color #151c24;
     /* Use surface container ladder for clearer elevation steps */
-    @define-color headerbar_bg_color #e3f1ea;
-    @define-color headerbar_fg_color #121e1a;
-    @define-color popover_bg_color #ddebe4;
-    @define-color popover_fg_color #121e1a;
-    @define-color view_bg_color #e9f7ef;
-    @define-color view_fg_color #121e1a;
-    @define-color card_bg_color #e9f7ef;
-    @define-color card_fg_color #121e1a;
+    @define-color headerbar_bg_color #e8eef9;
+    @define-color headerbar_fg_color #151c24;
+    @define-color popover_bg_color #e2e8f4;
+    @define-color popover_fg_color #151c24;
+    @define-color view_bg_color #eef4ff;
+    @define-color view_fg_color #151c24;
+    @define-color card_bg_color #eef4ff;
+    @define-color card_fg_color #151c24;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
@@ -25,20 +25,20 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    @define-color accent_color #00e0b2;
-    @define-color accent_fg_color #00382a;
-    @define-color accent_bg_color #00e0b2;
-    @define-color window_bg_color #0a1611;
-    @define-color window_fg_color #d8e6de;
+    @define-color accent_color #9ccaff;
+    @define-color accent_fg_color #003256;
+    @define-color accent_bg_color #9ccaff;
+    @define-color window_bg_color #0d141c;
+    @define-color window_fg_color #dde3ee;
     /* Use surface container ladder for clearer elevation steps */
-    @define-color headerbar_bg_color #16221d;
-    @define-color headerbar_fg_color #d8e6de;
-    @define-color popover_bg_color #202c28;
-    @define-color popover_fg_color #d8e6de;
-    @define-color view_bg_color #121e1a;
-    @define-color view_fg_color #d8e6de;
-    @define-color card_bg_color #121e1a;
-    @define-color card_fg_color #d8e6de;
+    @define-color headerbar_bg_color #1a2028;
+    @define-color headerbar_fg_color #dde3ee;
+    @define-color popover_bg_color #242b33;
+    @define-color popover_fg_color #dde3ee;
+    @define-color view_bg_color #151c24;
+    @define-color view_fg_color #dde3ee;
+    @define-color card_bg_color #151c24;
+    @define-color card_fg_color #dde3ee;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
