--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -3,20 +3,20 @@
 * Generated with Matugen
 */
 
-@define-color accent_color #9ccaff;
-@define-color accent_fg_color #003256;
-@define-color accent_bg_color #9ccaff;
-@define-color window_bg_color #0d141c;
-@define-color window_fg_color #dde3ee;
+@define-color accent_color #c7c8b2;
+@define-color accent_fg_color #2f3222;
+@define-color accent_bg_color #c7c8b2;
+@define-color window_bg_color #141312;
+@define-color window_fg_color #e5e2df;
 /* Use surface container ladder for clearer elevation steps */
-@define-color headerbar_bg_color #1a2028;
-@define-color headerbar_fg_color #dde3ee;
-@define-color popover_bg_color #242b33;
-@define-color popover_fg_color #dde3ee;
-@define-color view_bg_color #151c24;
-@define-color view_fg_color #dde3ee;
-@define-color card_bg_color #151c24;
-@define-color card_fg_color #dde3ee;
+@define-color headerbar_bg_color #20201e;
+@define-color headerbar_fg_color #e5e2df;
+@define-color popover_bg_color #2a2a28;
+@define-color popover_fg_color #e5e2df;
+@define-color view_bg_color #1c1c1a;
+@define-color view_fg_color #e5e2df;
+@define-color card_bg_color #1c1c1a;
+@define-color card_fg_color #e5e2df;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
