--- a/config/gtk-4.0/gtk.css
+++ b/config/gtk-4.0/gtk.css
@@ -4,20 +4,20 @@
 */
 
 @media (prefers-color-scheme: light) {
-    @define-color accent_color #006b54;
+    @define-color accent_color #006a61;
     @define-color accent_fg_color #ffffff;
-    @define-color accent_bg_color #006b54;
-    @define-color window_bg_color #effdf5;
-    @define-color window_fg_color #121e1a;
+    @define-color accent_bg_color #006a61;
+    @define-color window_bg_color #fff7fb;
+    @define-color window_fg_color #201a21;
     /* Use surface container ladder for clearer elevation steps */
-    @define-color headerbar_bg_color #e3f1ea;
-    @define-color headerbar_fg_color #121e1a;
-    @define-color popover_bg_color #ddebe4;
-    @define-color popover_fg_color #121e1a;
-    @define-color view_bg_color #e9f7ef;
-    @define-color view_fg_color #121e1a;
-    @define-color card_bg_color #e9f7ef;
-    @define-color card_fg_color #121e1a;
+    @define-color headerbar_bg_color #f7eaf5;
+    @define-color headerbar_fg_color #201a21;
+    @define-color popover_bg_color #f1e5ef;
+    @define-color popover_fg_color #201a21;
+    @define-color view_bg_color #fdf0fa;
+    @define-color view_fg_color #201a21;
+    @define-color card_bg_color #fdf0fa;
+    @define-color card_fg_color #201a21;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
@@ -25,20 +25,20 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    @define-color accent_color #00e0b2;
-    @define-color accent_fg_color #00382a;
-    @define-color accent_bg_color #00e0b2;
-    @define-color window_bg_color #0a1611;
-    @define-color window_fg_color #d8e6de;
+    @define-color accent_color #75d7ca;
+    @define-color accent_fg_color #003732;
+    @define-color accent_bg_color #75d7ca;
+    @define-color window_bg_color #171118;
+    @define-color window_fg_color #ebdfe9;
     /* Use surface container ladder for clearer elevation steps */
-    @define-color headerbar_bg_color #16221d;
-    @define-color headerbar_fg_color #d8e6de;
-    @define-color popover_bg_color #202c28;
-    @define-color popover_fg_color #d8e6de;
-    @define-color view_bg_color #121e1a;
-    @define-color view_fg_color #d8e6de;
-    @define-color card_bg_color #121e1a;
-    @define-color card_fg_color #d8e6de;
+    @define-color headerbar_bg_color #241e25;
+    @define-color headerbar_fg_color #ebdfe9;
+    @define-color popover_bg_color #2e282f;
+    @define-color popover_fg_color #ebdfe9;
+    @define-color view_bg_color #201a21;
+    @define-color view_fg_color #ebdfe9;
+    @define-color card_bg_color #201a21;
+    @define-color card_fg_color #ebdfe9;
     @define-color sidebar_bg_color @window_bg_color;
     @define-color sidebar_fg_color @window_fg_color;
     @define-color sidebar_border_color @window_bg_color;
